Added the main stucture for the page

--- a/index.html
+++ b/index.html
@@ -3,8 +3,83 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="author" content="Cay Haldey" />
       <link rel="stylesheet" href="style.css" />
-      <title>Document</title>
+      <title>Lab 1</title>
    </head>
-   <body></body>
+   <body id="top-of-page">
+      <header>
+         <img class="logo" src="logo.webp" alt="logotype of a dragon" />
+         <nav class="header-navbar">
+            <a href="#top-of-page">Home</a>
+            <a href="#interests">Interests</a>
+            <a href="#future-goals">Future Goals</a>
+            <a href="https://www.hkr.se" target="_blank">Kristianstad University</a>
+         </nav>
+      </header>
+      <main>
+         <!-- Hero -->
+         <section class="hero">
+            <h1>This is me</h1>
+            <img src="https://placehold.co/400x400" alt="an image of me" />
+         </section>
+
+         <!-- Biography -->
+         <section>
+            <h2>Biography</h2>
+            <div>
+               <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit magni sed veritatis.
+                  Reprehenderit cum dignissimos facere atque ipsa labore nam, ipsam praesentium et ea esse est
+                  fuga quis unde temporibus veritatis aut non soluta eligendi molestias facilis. Vel, cum,
+                  voluptates mollitia consectetur molestiae unde corporis dolorem atque illum reiciendis quae
+                  quam velit exercitationem alias dolore quaerat facilis magni odio fugiat soluta. Cupiditate
+                  illo accusamus repudiandae placeat est iste assumenda sunt corrupti aliquid. Cumque hic
+                  possimus incidunt alias modi inventore impedit cupiditate sequi sit nisi labore, cum ipsam
+                  officia quibusdam magnam reprehenderit ab rem iste molestiae temporibus. Assumenda sequi
+                  magni nesciunt?
+               </p>
+               <img src="https://placehold.co/400x400" alt="an image of..." />
+            </div>
+         </section>
+         <section id="interests">
+            <h2>Interests</h2>
+            <div>
+               <img src="https://placehold.co/400x400" alt="an image of..." />
+               <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quis possimus dolorem est
+                  culpa sunt autem quibusdam consequatur, minima illum sapiente magni! Corrupti accusantium
+                  voluptatibus consequuntur corporis est consequatur cumque. Tenetur iure quo repellendus a
+                  atque, molestias cupiditate aliquid voluptatibus enim. Quo veniam eveniet maiores nostrum
+                  animi nisi voluptates dolor, autem qui, dignissimos dolores enim natus numquam aliquam
+                  quisquam quasi exercitationem voluptatem fugit tenetur nemo nam! Voluptas, consequatur ea
+                  minima, mollitia accusantium id vel perferendis beatae adipisci voluptatum dolore in,
+                  assumenda tempore voluptate hic quam! Facilis facere dolores dolorem earum expedita placeat
+                  quis consectetur esse voluptas. Sapiente vel repellat numquam?
+               </p>
+            </div>
+         </section>
+         <section id="future-goals">
+            <h2>Future Goals</h2>
+            <div>
+               <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste magnam at molestiae ut,
+                  laboriosam exercitationem, magni dolorem ratione totam provident rerum quo ab, iure error!
+                  Id magnam consequuntur optio rem perspiciatis voluptatem fuga neque beatae quibusdam illum,
+                  exercitationem, est cum, cupiditate ex corporis quis officiis ea recusandae ad minima iusto
+                  nihil. Nemo tempore delectus ab nesciunt maxime dolore blanditiis ea at veniam dolores
+                  molestiae perspiciatis nobis labore velit enim est, itaque corporis natus sequi id iste
+                  culpa. Facere hic sunt earum quasi quo corporis ad quam accusamus eos magni asperiores
+                  nobis, velit dolores laboriosam laudantium quia corrupti? Possimus, labore iste?
+               </p>
+               <img src="https://placehold.co/400x400" alt="an image of..." />
+            </div>
+         </section>
+      </main>
+      <footer>
+         <a href="mailto:cay.haldey0231@stud.hkr.se">contact-me@stud.hkr.se</a>
+         <p>&copy; All rights reserved</p>
+         <a href="#">Privacy Policy & Terms</a>
+      </footer>
+   </body>
 </html>
