--- a/index.html
+++ b/index.html
@@ -75,9 +75,47 @@
                <img src="https://placehold.co/400x400" alt="an image of..." />
             </div>
          </section>
+         <section>
+            <form method="post" action="mailto:cay.haldey@stud.hkr.se">
+               <fieldset>
+                  <legend>Contact Form</legend>
+
+                  <div>
+                     <label for="fname">First name</label>
+                     <input type="text" name="fname" required placeholder="John" />
+                  </div>
+                  <div>
+                     <label for="lname">Lastname</label>
+                     <input type="text" name="lname" required placeholder="Doe" />
+                  </div>
+                  <div>
+                     <label for="phone">Phone</label>
+                     <input
+                        type="tel"
+                        name="phone"
+                        pattern="[0-9]{2}-[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{2}"
+                        placeholder="46-8-123-456-78" />
+                  </div>
+                  <div>
+                     <label for="email">Email</label>
+                     <input type="email" name="email" required placeholder="john@doe.se" />
+                  </div>
+                  <div>
+                     <label for="msg">Message</label>
+                     <textarea
+                        name="msg"
+                        rows="10"
+                        cols="50"
+                        required
+                        placeholder="Enter your message"></textarea>
+                  </div>
+               </fieldset>
+               <input type="submit" value="Send message" />
+            </form>
+         </section>
       </main>
       <footer>
-         <a href="mailto:cay.haldey0231@stud.hkr.se">contact-me@stud.hkr.se</a>
+         <a href="#">contact-me@stud.hkr.se</a>
          <p>&copy; All rights reserved</p>
          <a href="#">Privacy Policy & Terms</a>
       </footer>
