added media query

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <a href="#top-of-page">Home</a>
             <a href="#interests">Interests</a>
             <a href="#future-goals">Future Goals</a>
+            <a href="#form">Contact</a>
             <a href="https://www.hkr.se" target="_blank">Kristianstad University</a>
          </nav>
       </header>
