adjusted the link to exteral page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="#interests">Interests</a>
             <a href="#future-goals">Future Goals</a>
             <a href="#form">Contact</a>
-            <a href="https://www.hkr.se" target="_blank">Kristianstad University</a>
+            <a href="https://github.com/HaldeyC/Lab1" target="_blank">Github - Lab1</a>
          </nav>
       </header>
       <main>
@@ -83,7 +83,7 @@
          </section>
          <section id="form">
             <h2>Contact me</h2>
-            <form method="post" action="mailto:cay.haldey@stud.hkr.se">
+            <form method="post" action="mailto:cay.haldey0231@stud.hkr.se">
                <div>
                   <label for="fname">First name</label>
                   <input type="text" name="fname" required placeholder="John" />
