adjusted the link to exteral page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    </head>
    <body id="top-of-page">
       <header>
-         <a href="#top-of-page"><img class="logo" src="logo.webp" alt="logotype of a dragon" /></a>
+         <a href="#top-of-page"><img class="logo" src="logo.png" alt="logotype of a dragon" /></a>
          <nav class="header-navbar">
             <a href="#top-of-page">Home</a>
             <a href="#interests">Interests</a>
@@ -22,7 +22,7 @@
          <!-- Hero -->
          <section class="hero">
             <h1>Haldey Portfolio</h1>
-            <img src="sakura.webp" alt="an image of sakura trees" />
+            <img src="sakura.jpg" alt="an image of sakura trees" />
          </section>
 
          <!-- Biography -->
@@ -40,13 +40,13 @@
                   all the buildings were destroyed you could land the plane and win the game. This was a very
                   long time ago, but it is still a good memory to me.
                </p>
-               <img src="me.webp" alt="an image of mee" />
+               <img src="me.jpg" alt="an image of mee" />
             </div>
          </section>
          <section id="interests">
             <h2>Interests</h2>
             <div>
-               <img src="interests.webp" alt="an image of some HTML code on a screen" />
+               <img src="interests.jpeg" alt="an image of some HTML code on a screen" />
                <p>
                   How I got interested in web development? That started a long time ago. Actually long before
                   Google was in the picture. I tried it out when Netscape Navigator still was a thing. I
@@ -78,7 +78,7 @@
                   yourself you work for your dreams. That's why I chose this path, I want to be able to work
                   for my own dreams in the future.
                </p>
-               <img src="area.webp" alt="an image of an area in Stockholm" />
+               <img src="area.jpg" alt="an image of an area in Stockholm" />
             </div>
          </section>
          <section id="form">
